<resources>
    <string name="app_name">Stylish</string>
    <string name="title_activity_splash_scren">SplashScren</string>
    <string name="let_s_get_s">Let\'s Get Started</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="remember_me">Remember me</string>
    <string name="default_text">BaseTextButton\n</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sign_in">Login</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="by_connecti">By connecting your account confirm that you agree with our Term and Condition</string>
    <string name="title_home">home</string>
    <string name="title_favorites">favorites</string>
    <string name="title_cart">cart</string>
    <string name="title_wallet">wallet</string>
    <string name="voice_search_icon">voicesearch</string>
    <string name="men_s_print">Men\'s Printed Pullover Hoodie            </string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="reviews">Reviews</string>
    <string name="view_all">View all</string>
    <string name="rating">rating</string>
    <string name="adidas">Adidas</string>
    <string name="small_size">S</string>
    <string name="cart">Cart</string>
    <string name="delivery_address">Delivery address</string>
    <string name="address">43, Electronics City Phase 1,\nElectronic City</string>
    <string name="payment_method">Payment Method</string>
    <string name="name_of_card">Visa Classic</string>
    <string name="card_number_last_numbs">**** 7690</string>
    <string name="order_info">Order Info</string>
    <string name="subtotal">Subtotal</string>
    <string name="_110">$110</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="tax">4.00</string>
    <string name="decrease_quantity">decress\n</string>
    <string name="forget_password">"Forgot Password? "</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="hintforget">Please write your email to receive a confirmation \n code to set a new password.</string>
    <string name="verification_code">Verification Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="drawer_close">Colse Drawer</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="your_web_client_id" translatable="false">268886359428-s36v1vte90fuoul7i6l3treir9hsqlk3.apps.googleusercontent.com</string>

    <string name="facebook_app_id">1400075447583863</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb6ead2d60b44448211aab819f0ab0edb5</string>
    <string name="facebook_client_token">2156d3922742877c3362a7b62a087d04</string>
    <string name="API_Key" translatable="false">RkHjQR5YtzD5CWPeR4xqORMoT</string>
    <string name="API_secret" translatable="false">hflvunWw7T2ZMTnIp86XrSo4Q1JYYBIazo58nTK9zA32hjLlOx</string>
    <string name="size" translatable="false">XLL</string>
    <string name="zeroPrecent" translatable="false">$0.00</string>
    <string name="favorite_icon" translatable="false">Favorite icon</string>
    <string name="welcome_to_stylish">Welcome to Stylish.</string>
    <string name="placeHolderLink" translatable="false">https://openplanned.org/openplanned-content/uploads/2016/01/blank-profile-picture-973460_640-500x500.png</string>
    <string name="cash_on_delivery_cod">Cash on Delivery</string>
    <string name="use_your_cards_to_pay">Use your cards to pay</string>
    <string name="pay_with_stripe">Pay with Stripe</string>
    <string name="add_address">Add Address</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_confirmed_description">Your order has been confirmed, we will send you confirmation email shortly.</string>
    <string name="go_to_orders">Go to Orders</string>
    <string name="orders">Orders</string>
    <string name="item_in_order_name">item_in_order_name</string>
    <string name="publish_key">pk_test_51PvqwnGfrZnPfialSKBHf1dunaJqztGTmy1celVwsFZifTEepFf9l808cUw77yiT5Xj9n9cvJDxS1JLIzXvbjKe800CIDNtEZK</string>
    <string name="search">Search...</string>
    <string name="new_arrival">New Arrival</string>
    <string name="choose_brand">Choose Brand</string>
    <string name="email_addres">Email Address</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>


</resources>