<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.activity.CartActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/circle"
        android:clickable="true"

        android:src="@drawable/arrow_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <!-- Content above the button -->
    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Back button and Cart title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cartTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/cart"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <!-- Cart items -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"

        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/contentLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Delivery Address and Payment Method -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_address"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:src="@drawable/map_img_light" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:fontFamily="@font/inter"
                    android:text="@string/address"
                    android:textAppearance="@style/head1"
                    android:textColor="#8F959E"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/checkb"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:scaleX="1.4"
                    android:scaleY="1.4" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/visabackgroundlight"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/card_logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/visalogo" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:fontFamily="@font/inter"
                        android:text="@string/name_of_card"
                        android:textAppearance="@style/head1"
                        android:textColor="#1D1E20"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:text="@string/card_number_last_numbs"
                        android:textAppearance="@style/head1"
                        android:textColor="#8F959E"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkboxpayment"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:scaleX="1.4"
                    android:scaleY="1.4" />
            </LinearLayout>
        </LinearLayout>

        <!-- Order Info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_info"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/subtotal"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/subtotal_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_110"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delivery_charge"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/delivery_charge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$10"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$120"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <!-- Bottom button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bottomButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/buttonbase"
        android:backgroundTint="@color/primary_color"
        android:text="@string/checkout"
        android:textAppearance="@style/head2"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
