<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/background_order_confirmed"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/order_confirmed_icon_mobile"

            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:src="@drawable/verification"
            android:layout_gravity="center_vertical"
            />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_gravity="bottom"
        >

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_confirmed"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_confirmed_description"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textAppearance="@style/secondryTextLight"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/go_to_orders"
                android:textColor="#8F959E"
                android:id="@+id/go_to_orders_button"

                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:id="@+id/continue_shopping_button"
                android:layout_height="wrap_content"
                android:text="Continue Shopping"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary_color"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
