<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.fragment.ForgotPassowrdFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.fragment.ForgotPassowrdFragment">

        <com.example.stylish.assets.CapitalizeFirstTextView
            android:id="@+id/forget_pass_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="60dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAppearance="@style/head1"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewVerf"
            android:layout_width="320dp"
            android:layout_height="230dp"
            android:src="@drawable/verf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forget_pass_id" />


        <!-- Email Address Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewVerf"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.stylish.assets.CapitalizeFirstTextView
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hintforget"
            android:textAppearance="@style/men_s_tie_d"
            android:textAlignment="center"
            android:textColor="@color/secondrey_text_color_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>